--- a/covid19/index.html
+++ b/covid19/index.html
@@ -3,168 +3,111 @@
 
 <head>
 	<title>Data Situasi Virus Corona: Sumber covid19.go.id</title>
+	<style>
+		body {
+			padding: 0;
+			margin: 0;
+			font-family: Verdana, Geneva, Tahoma, sans-serif;
+			background-color: #000;
+			color: #ccc;
+		}
+
+		.tgl {
+			position: absolute;
+			left: 46px;
+			top: 250px;
+
+			font-style: normal;
+			font-weight: bold;
+			font-size: 21px;
+			line-height: 25px;
+			color: #776D6D;
+			text-transform: uppercase;
+		}
+
+		.number {
+			position: absolute;
+			font-style: normal;
+			font-weight: bold;
+			line-height: 63px;
+		}
+
+		.total {
+			font-size: 30px;
+			left: 455px;
+		}
+
+		.daily {
+			left: 187px;
+			font-size: 47px;
+		}
+
+		.positive {
+			color: #FF8A00;
+		}
+
+		.positive-daily {
+			top: 387px;
+		}
+
+		.positive-total {
+			top: 387px;
+		}
+
+		.dirawat {
+			color: #FFFFFF;
+		}
+
+		.dirawat-daily {
+			top: 479px;
+		}
+
+		.dirawat-total {
+			top: 479px;
+		}
+
+		.sembuh {
+			color: #00FF38;
+		}
+
+		.sembuh-daily {
+			top: 562px;
+		}
+
+		.sembuh-total {
+			top: 562px;
+		}
+
+		.meninggal {
+			color: #B50808;
+		}
+
+		.meninggal-daily {
+			top: 639px;
+		}
+
+		.meninggal-total {
+			top: 639px;
+		}
+	</style>
 </head>
 
 <body>
 	<div id="app">
-		<h1>Data Situasi Covid-19 Indonesia</h1>
-		<table width="100%" border="1" v-if="typeof update.data !== 'undefined'">
-			<tr>
-				<td align="center">
-					Last update<br>
-					<strong>{{ update.update.penambahan.tanggal }}</strong>
-				</td>
-				<td>&nbsp;</td>
-				<td align="center">
-					<h1>+{{ update.update.penambahan.jumlah_positif }}</h1><strong>POSITIF</strong>
-				</td>
-				<td align="center">
-					<h1>+{{ update.update.penambahan.jumlah_dirawat }}</h1><strong>DIRAWAT</strong>
-				</td>
-				<td align="center">
-					<h1>+{{ update.update.penambahan.jumlah_sembuh }}</h1><strong>SEMBUH</strong>
-				</td>
-				<td align="center">
-					<h1>+{{ update.update.penambahan.jumlah_meninggal }}</h1><strong>MENINGGAL</strong>
-				</td>
-			</tr>
-			<tr>
-				<td align="center">
-					<h1>{{ update.data.jumlah_pdp }}</h1><strong>PDP</strong>
-				</td>
-				<td align="center">
-					<h1>{{ update.data.jumlah_odp }}</h1><strong>ODP</strong>
-				</td>
-				<td align="center">
-					<h1>{{ update.update.total.jumlah_positif }}</h1><strong>POSITIF</strong>
-				</td>
-				<td align="center">
-					<h1>{{ update.update.total.jumlah_dirawat }}</h1><strong>DIRAWAT</strong>
-				</td>
-				<td align="center">
-					<h1>{{ update.update.total.jumlah_sembuh }}</h1><strong>SEMBUH</strong>
-				</td>
-				<td align="center">
-					<h1>{{ update.update.total.jumlah_meninggal }}</h1><strong>MENINGGAL</strong>
-				</td>
-			</tr>
-		</table>
-		<br>
-		<table width="100%" border="1" v-if="prov?.length > 0">
-			<thead>
-				<tr>
-					<th rowspan="2">PROVINSI</th>
-					<th rowspan="2">JUMLAH KASUS</th>
-					<th colspan="2">JENIS KELAMIN</th>
-					<th colspan="6">USIA</th>
-					<th rowspan="2">SEMBUH</th>
-					<th rowspan="2">MENINGGAL</th>
-					<th rowspan="2">DIRAWAT</th>
-				</tr>
-				<tr>
-					<th>LAKI-LAKI</th>
-					<th>PEREMPUAN</th>
-					<th>0-5</th>
-					<th>6-17</th>
-					<th>18-30</th>
-					<th>31-45</th>
-					<th>46-59</th>
-					<th>&ge; 60</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr v-for="item in prov">
-					<td>{{ item.key }}</td>
-					<td align="center">
-						<strong>{{ item.jumlah_kasus }}</strong>
-					</td>
-					<td align="center" v-for="kel in item.jenis_kelamin">
-						{{ kel.doc_count }}
-					</td>
-					<td align="center">
-						<span v-if="item.kelompok_umur[0].key == '0-5'">
-							{{ item.kelompok_umur[0].doc_count }}
-						</span>
-						<span v-else>&nbsp;</span>
-					</td>
-					<td align="center">
-						<span v-if="item.kelompok_umur[1].key == '6-18'">
-							{{ item.kelompok_umur[1].doc_count }}
-						</span>
-						<span v-if="item.kelompok_umur[0].key == '6-18'">
-							{{ item.kelompok_umur[0].doc_count }}
-						</span>
-						<span v-else>&nbsp;</span>
-					</td>
-					<td align="center">
-						<span v-if="item.kelompok_umur[2].key == '19-30'">
-							{{ item.kelompok_umur[2].doc_count }}
-						</span>
-						<span v-if="item.kelompok_umur[1].key == '19-30'">
-							{{ item.kelompok_umur[1].doc_count }}
-						</span>
-						<span v-else>&nbsp;</span>
-					</td>
-					<td align="center">
-						<span v-if="item.kelompok_umur[3].key == '31-45'">
-							{{ item.kelompok_umur[3].doc_count }}
-						</span>
-						<span v-if="item.kelompok_umur[2].key == '31-45'">
-							{{ item.kelompok_umur[2].doc_count }}
-						</span>
-						<span v-else>&nbsp;</span>
-					</td>
-					<td align="center">
-						<span v-if="item.kelompok_umur[4].key == '46-59'">
-							{{ item.kelompok_umur[4].doc_count }}
-						</span>
-						<span v-if="item.kelompok_umur[3].key == '46-59'">
-							{{ item.kelompok_umur[3].doc_count }}
-						</span>
-						<span v-else>&nbsp;</span>
-					</td>
-					<td align="center">
-						<span v-if="item.kelompok_umur.length > 5">
-							{{ item.kelompok_umur[5].doc_count }}
-						</span>
-						<span v-else>
-							{{ item.kelompok_umur[4].doc_count }}
-						</span>
-					</td>
-					<!-- <td align="center" v-for="umur in item.kelompok_umur">
-			  		{{ umur.key + ' ' + umur.doc_count }}
-			  	</td> -->
-					<td align="center">{{ item.jumlah_sembuh }}</td>
-					<td align="center">{{ item.jumlah_meninggal }}</td>
-					<td align="center">{{ item.jumlah_dirawat }}</td>
-				</tr>
-			</tbody>
-		</table>
-		<i v-else>Loading...</i>
-		<br>
-		<table width="100%" border="1" v-if="typeof update.data !== 'undefined'">
-			<thead>
-				<tr>
-					<td>UPDATE HARIAN</td>
-				</tr>
-				<tr>
-					<th>TANGGAL</th>
-					<th>MENINGGAL</th>
-					<th>SEMBUH</th>
-					<th>POSITIF</th>
-					<th>DIRAWAT</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr v-for="item in update.update.harian">
-					<td>{{ item.key_as_string.split('T')[0] }}</td>
-					<td align="center">{{ item.jumlah_meninggal.value }}</td>
-					<td align="center">{{ item.jumlah_sembuh.value }}</td>
-					<td align="center">{{ item.jumlah_positif.value }}</td>
-					<td align="center">{{ item.jumlah_dirawat.value }}</td>
-				</tr>
-			</tbody>
-		</table>
+		<div v-if="typeof update.data !== 'undefined'">
+			<div class="tgl" v-html="tgl"></div>
+			<div class="number daily positive positive-daily" v-html="positive"></div>
+			<div class="number daily dirawat dirawat-daily" v-html="dirawat"></div>
+			<div class="number daily sembuh sembuh-daily" v-html="sembuh"></div>
+			<div class="number daily meninggal meninggal-daily" v-html="meninggal"></div>
+
+			<div class="number total positive positive-total" v-html="totalPositive"></div>
+			<div class="number total dirawat dirawat-total" v-html="totalDirawat"></div>
+			<div class="number total sembuh sembuh-total" v-html="totalSembuh"></div>
+			<div class="number total meninggal meninggal-total" v-html="totalMeninggal"></div>
+		</div>
+
+		<img src="https://aageboi.github.io/covid19/bg.jpg" width="600" height="900" />
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -188,10 +131,49 @@
 						this.update = res.data
 					})
 			},
+			methods: {
+				formatNumber: function (x, o) {
+					let a = x > 1 ? '+' : (x < 0 ? '-' : '')
+					if (typeof o !== 'undefined') a = o
+					return a + x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".")
+				}
+			},
 			computed: {
 				kelompokUmur: function () {
 					return this.prov.kelompok_umur
-				}
+				},
+				tgl: function () {
+					const d = new Date(this.update.update.penambahan.tanggal)
+					const monthNames = ["January", "February", "March", "April", "May", "June",
+						"July", "August", "September", "October", "November", "December"
+					];
+
+					return 'Updated on ' + d.getDate() + ' ' + monthNames[d.getMonth()] + ' ' + d.getFullYear()
+				},
+				positive: function () {
+					return this.formatNumber(this.update.update.penambahan.jumlah_positif)
+				},
+				dirawat: function () {
+					return this.formatNumber(this.update.update.penambahan.jumlah_dirawat)
+				},
+				sembuh: function () {
+					return this.formatNumber(this.update.update.penambahan.jumlah_sembuh)
+				},
+				meninggal: function () {
+					return this.formatNumber(this.update.update.penambahan.jumlah_meninggal)
+				},
+				totalPositive: function () {
+					return this.formatNumber(this.update.update.total.jumlah_positif, '')
+				},
+				totalDirawat: function () {
+					return this.formatNumber(this.update.update.total.jumlah_dirawat, '')
+				},
+				totalSembuh: function () {
+					return this.formatNumber(this.update.update.total.jumlah_sembuh, '')
+				},
+				totalMeninggal: function () {
+					return this.formatNumber(this.update.update.total.jumlah_meninggal, '')
+				},
 			}
 		})
 	</script>
